# archodex-agent

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.yaml  Cargo.toml  Dockerfile  LICENSE.md  archodex.yaml  build.rs  register_clang_version.sh  technical_details.md  update-vmlinux.h.sh
.cargo/: config.toml
.devcontainer/: attached_init.sh  devcontainer.json  init.sh  k3d_config.yaml
.devcontainer/k8s/: 00_cluster_role.yaml  00_cluster_role_binding.yaml  00_persistent_volume_claim.yaml  00_service_account.yaml  10_pod.yaml  README.md
.github/workflows/: build-dev.yml  cargo-clippy-and-format-checks.yml
src/: account_salted_hasher.rs  bpf_event_parser_helpers.rs  bpf_log.rs  elf.rs  global_opts.rs  gopclntab.rs  hexdump.rs  libssl_event_parser.rs  main.rs  mmap_exec_files.rs  mmap_exec_files_event_parser.rs  mount_path.rs  network.rs  pid_waiter.rs  process_context.rs  report_api_key.proto  report_api_key.rs  ruleset.rs  send_report.rs  ssl_instrumenter.rs
src/bpf/: assert.h  boringssl.c  emit_buf.c  libssl.bpf.c  libssl.h  log.h  log_common.h  log_libssl.h  log_mmap_exec_files.h  mmap_exec_files.bpf.c  mmap_exec_files.h  ring.c  server_name_filter.c  server_name_filter.h  tls.c  tls.h  vmlinux-aarch64.h  vmlinux.h
src/bpf/libssl/: go_runtime.c  go_runtime.h  go_tls.h  go_tls_conn_close.c  go_tls_conn_handshake_context.c  go_tls_conn_read.c  go_tls_conn_write.c  ssl_ctrl.c  ssl_free.c  ssl_read.c  ssl_read_ex.c  ssl_write.c  ssl_write_ex.c
src/engine/: debug_server_name_filter.rs  event_capture.rs  hostname_filter.rs  mod.rs  principal.rs  report.rs  resource_capture.rs  rules.rs  template_renderer.rs  try_from_config.rs
src/engine/config/: context.rs  deserialize_regex.rs  deserialize_with_inputs.rs  event_capture.rs  mod.rs  resource_capture.rs  rules.rs
src/engine/context/: base.rs  kubernetes.rs  mod.rs
src/engine/parser/: http.rs
src/engine/rule/: http.rs  mod.rs
src/license_enforcement/: event_tracker.rs  messages.rs  mod.rs  resource_tracker.rs  state.rs
src/secrets/: github.rs  mod.rs
src/transport_parser/: http.rs  http1.rs  http2.rs  mod.rs
